fixed half-visible panorama buttons in IE11

--- a/plugins/plugins-available/panorama/root/panorama-1.84.css
+++ b/plugins/plugins-available/panorama/root/panorama-1.84.css
@@ -37,6 +37,9 @@ DIV.x-tab-default-over A.x-tab-close-btn {
     background-image: url("images/new_tab.gif") !important;
     left: -4px;
 }
+DIV.x-tab-top button {
+    overflow: visible;
+}
 .gear-tab {
     background-image: url("images/cog_add.png") !important;
     left: -4px;
